--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -54,7 +54,7 @@ jobs:
         # just notebooks containing "Colab" in name 
         # Run_Spark_on_Google_Colab.ipynb OK
         # Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
-        for n in Run_Spark_on_Google_Colab.ipynb 
+        for n in PySpark_On_Google_Colab.ipynb  
         do
           jupyter nbconvert --to notebook --execute $n
           [ $? -eq 0 ] && jupyter nbconvert --to python $n
