--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -65,8 +65,11 @@ jobs:
           echo -e "$header" "$(cat $file)" >$file
           # push .py file
           git add $file
-          git add ${file}nbconvert.ipynb 
+          #git add ${file}nbconvert.ipynb 
         done
+    - name: List files currently in the workspace
+      run: |
+          ls ${{ github.workspace }}/*.ipynb
         # https://github.com/actions/checkout?tab=readme-ov-file#push-a-commit-using-the-built-in-token
         git add ./action_log.txt
         git commit -m "generated"
