--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -65,7 +65,7 @@ jobs:
           echo -e "$header" "$(cat $file)" >$file
           # push .py file
           git add $file
-          #git add ${file}nbconvert.ipynb 
+          git add $(basename $n ipynb)nbconvert.ipynb 
         done
         # https://github.com/actions/checkout?tab=readme-ov-file#push-a-commit-using-the-built-in-token
         git add ./action_log.txt
@@ -73,5 +73,5 @@ jobs:
         git push 
     - name: List files currently in the workspace
       run: |
-        ls ${{ github.workspace }}/*.ipynb
+        ls ${{ github.workspace }}/*.ipynb ${{ github.workspace }}/*.py
  
