--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -12,7 +12,7 @@ on:
   push:
     branches: [dev]
     paths-ignore:
-      - '/.github/workflows/'
+      - '/.github/workflows/*'
 permissions:
   contents: write
 jobs:
