--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -59,8 +59,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         set -e
-        # just notebooks containing "Colab" in name 
-        # Run_Spark_on_Google_Colab.ipynb OK
+        # just "runnable" notebooks  
         # Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
         for n in ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb 
         do
