--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Run Jupyter Notebooks testing
       run: |
         date > action_log.txt
+        git status
         git pull --rebase origin master
         git config user.name github-actions
         git config user.email github-actions@github.com
