--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -56,7 +56,7 @@ jobs:
       run: |
         date > action_log.txt
         git status
-        git pull --rebase origin master
+        git pull --rebase --autostash origin master
         git config user.name github-actions
         git config user.email github-actions@github.com
         set -e
