--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -58,7 +58,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         date > action_log.txt
-        echo "These notebooks were tested on ubuntu-latest:" >> action_log.txt
+        echo "The following notebooks were successfully executed on ubuntu-latest:" >> action_log.txt
         set -e
         # just "runnable" notebooks  
         # Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
