--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -73,6 +73,7 @@ jobs:
            jupyter nbconvert --to python $n 
            # get the Python file's name by removing .ipynb extension from $n and then adding .py
            file=$(basename $n ipynb)py
+           echo "Python file: $file"
            header="# This file was generated from $n with nbconvert\n# Source: https://github.com/${{ github.repository }}\n\n"
            echo -e "$header" "$(cat $file)" >$file
            # push .py file
