--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -72,7 +72,7 @@ jobs:
            echo ✅ $n >>action_log.txt
            jupyter nbconvert --to python $n 
            # get the Python file's name by removing .ipynb extension from $n and then adding .py
-           file=$(basename $n ipynb)py
+           file=$(basename $n ipynb).py
            echo "Python file: $file"
            header="# This file was generated from $n with nbconvert\n# Source: https://github.com/${{ github.repository }}\n\n"
            echo -e "$header" "$(cat $file)" >$file
