--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -72,12 +72,16 @@ jobs:
            echo ✅ $n >>action_log.txt
            jupyter nbconvert --to python $n 
            # get the Python file's name by removing .ipynb extension from $n and then adding .py
-           file=$(basename $n ipynb).py
+           file=$(basename $n .ipynb)'.py'
            echo "Python file: $file"
-           header="# This file was generated from $n with nbconvert\n# Source: https://github.com/${{ github.repository }}\n\n"
-           echo -e "$header" "$(cat $file)" >$file
-           # push .py file
-           git add $file
+           if ! [ -f /path/to/file ]; then
+             echo "File does not exist."
+           else
+              header="# This file was generated from $n with nbconvert\n# Source: https://github.com/${{ github.repository }}\n\n"
+              echo -e "$header" "$(cat $file)" >$file
+              # push .py file
+              git add $file
+           fi
            git add $(basename $n ipynb)nbconvert.ipynb 2>/dev/null
           else
             echo ❌ $n >>action_log.txt
