--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -63,7 +63,8 @@ jobs:
         # just "runnable" notebooks  
         # Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
         # OK: ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb 
-        for n in MapReduce_Primer_HelloWorld Encoding+dataframe+columns.ipynb \
+        for n in MapReduce_Primer_HelloWorld_bash.ipynb MapReduce_Primer_HelloWorld.ipynb \
+                 Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb Apache_Sedona_with_PySpark.ipynb \
                  ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb
         do
@@ -72,7 +73,7 @@ jobs:
            echo ✅ $n >>action_log.txt
            jupyter nbconvert --to python $n 
            # get the Python file's name by removing .ipynb extension from $n and then adding .py
-           file=$(basename $n .ipynb)'.py'
+           file=$(basename $n ipynb)'py'
            echo "Python file: $file"
            if ! [ -f $file ]; then
              echo "File does not exist."
