--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -64,7 +64,8 @@ jobs:
         # Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
         # OK: ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb 
         start=`date +%s`
-        for n in MapReduce_Primer_HelloWorld_bash.ipynb MapReduce_Primer_HelloWorld.ipynb \
+        for n in Hadoop_minicluster.ipynb \
+                 MapReduce_Primer_HelloWorld_bash.ipynb MapReduce_Primer_HelloWorld.ipynb \
                  Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb Apache_Sedona_with_PySpark.ipynb \
                  ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb
