--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -64,7 +64,8 @@ jobs:
         # Not OK: Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
         #         MapReduce_Primer_HelloWorld.ipynb 
         start=`date +%s`
-        for n in GutenbergBooks.ipynb Hadoop_minicluster.ipynb \
+        for n in Spark_Standalone_Architecture_on_Google_Colab \
+                 GutenbergBooks.ipynb Hadoop_minicluster.ipynb \
                  Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb Apache_Sedona_with_PySpark.ipynb \
                  ngrams_with_pyspark.ipynb PySpark_On_Google_Colab.ipynb Run_Spark_on_Google_Colab.ipynb
