--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -39,18 +39,27 @@ jobs:
       with:
         sparse-checkout: |
           ngrams_with_pyspark.ipynb
-          PySpark_On_Google_Colab.ipynb
+          PySpark_On_Google_Colab.ipynb 
           
     - name: Set up Python environment
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+        
     # Install requirements
     - name: Install requirements
       run: |
         python --version
         python -m pip install -r requirements.txt
 
+    # Install Java (see: https://github.com/actions/setup-java)
+    - name: Install Java 11
+      uses: actions/checkout@v4
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '11'
+        
     # Runs a set of commands using the runners shell
     - name: Run Jupyter Notebooks testing
       run: |
