--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -74,6 +74,7 @@ jobs:
         #         Apache_Sedona_with_PySpark.ipynb 
         start=`date +%s`
         for n in Spark_Standalone_Architecture_on_Google_Colab \
+                 Apache_Sedona_with_PySpark.ipynb \
                  GutenbergBooks.ipynb Hadoop_minicluster.ipynb \
                  Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb \
