--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -71,13 +71,14 @@ jobs:
         # just "runnable" notebooks  
         # Not OK: Hadoop_single_node_cluster_setup_Python.ipynb cannot install ssh server
         #         MapReduce_Primer_HelloWorld.ipynb 
-        #         Apache_Sedona_with_PySpark.ipynb 
+        #         GutenbergBooks.ipynb 
+        
         start=`date +%s`
         for n in polynomial_regression.ipynb \
                  Spark_Standalone_Architecture_on_Google_Colab \
                  Run_Spark_on_Google_Colab.ipynb \
                  Apache_Sedona_with_PySpark.ipynb \
-                 GutenbergBooks.ipynb Hadoop_minicluster.ipynb \
+                 Hadoop_minicluster.ipynb \
                  Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb \
                  ngrams_with_pyspark.ipynb \
