--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -7,6 +7,7 @@ run-name: Run notebooks 🚀
 # also it would be better to create an image instead of downloading software every time
 ## see https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
 on: 
+  # triggering all my workflows manually, like a caveman 🦖
   workflow_dispatch
   # trigger workflow on push to the master branch of .ipynb file
   # push:
@@ -82,7 +83,9 @@ jobs:
                  Encoding+dataframe+columns.ipynb \
                  generate_data_with_Faker.ipynb \
                  ngrams_with_pyspark.ipynb \
-                 PySpark_On_Google_Colab.ipynb
+                 PySpark_On_Google_Colab.ipynb \
+                 Unicode.ipynb \
+                 GutenbergBooks.ipynb
         do
           jupyter nbconvert --log-level=ERROR --to notebook --execute $n
           if [ $? -eq 0 ]; then
