👷 action get_info_on_runner.yml

--- a/.github/workflows/get_info_on_runner.yml
+++ b/.github/workflows/get_info_on_runner.yml
@@ -4,7 +4,7 @@ on:
   # needs to be started manually
   workflow_dispatch:
 jobs:
-  List-Input-File:
+  Runner-Info-RAM-CPU:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🔶  🔶  🔶  🔶  🔶  🔶  🔶  🔶  🔶"
