--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -18,7 +18,9 @@ permissions:
   contents: write
 jobs:
   List-Notebook-Files:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    # see: https://github.com/actions/runner-images/issues/10636
+    runs-on: ubuntu-22.04
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
