--- a/.github/workflows/run-one-notebook.yml
+++ b/.github/workflows/run-one-notebook.yml
@@ -17,7 +17,8 @@ permissions:
   contents: write
 jobs:
   List-Notebook-File:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
