--- a/.github/workflows/run-one-notebook.yml
+++ b/.github/workflows/run-one-notebook.yml
@@ -60,6 +60,12 @@ jobs:
         distribution: 'temurin' # See 'Supported distributions' for available options
         java-version: '11'
         
+    # Install wget
+    - name: Install wget
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget
+        
     # Runs a set of commands using the runners shell
     - name: Run Jupyter Notebook testing
       run: |
