--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -14,8 +14,6 @@ on:
   #   branches: [master, dev]
   #   paths:
   #     - '/*.ipynb'
-# Set a timeout for the entire workflow (e.g., 60 minutes)
-timeout-minutes: 30
 
 permissions:
   contents: write
@@ -38,6 +36,8 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
   Run-Notebooks:
     runs-on: ubuntu-latest
+    # Set a timeout for this job (e.g., 60 minutes)
+    timeout-minutes: 30
 
     steps:
     - name: Checkout code
