--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -91,7 +91,8 @@ jobs:
                  PySpark_On_Google_Colab.ipynb \
                  Unicode.ipynb \
                  GutenbergBooks.ipynb \
-                 Hadoop_Setting_up_a_Single_Node_Cluster
+                 Hadoop_Setting_up_a_Single_Node_Cluster.ipynb \
+                 SLURM.ipynb
           do
           #jupyter nbconvert --stdout --debug --log-level=INFO --to notebook --execute $n
           jupyter nbconvert --log-level=INFO --to notebook --execute $n
