Set timeout for Jupyter notebook execution to 900 seconds
Add a timeout for notebook execution in the workflow.

--- a/.github/workflows/run-jupyter-notebooks.yml
+++ b/.github/workflows/run-jupyter-notebooks.yml
@@ -12,4 +12,6 @@ jobs:
     with:
       # target_repo is the current "owner/repo"
       target_repo: ${{ github.repository }}
+      # timeout for notebook execution
+      timeout: 900
     # secrets: inherit # Uncomment this if you need to pass secrets like PATs
